Added multithreading and transaction handling to speed up querying and adding books from Google Books API