@@ -11,18 +11,21 @@ import practice.bookrentalapp.dto.BookSearchRequestDto;
 import practice.bookrentalapp.dto.BookSearchRequestDto.SearchGroup;
 import practice.bookrentalapp.dto.GoogleBooksResponseDto;
 import practice.bookrentalapp.entities.Book;
-import practice.bookrentalapp.repositories.BookRepository;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
 import java.util.*;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
 @Service
 public class GoogleBooksApiService {
-    private final BookRepository bookRepository;
+    private final BookService bookService;
     private final RestTemplate restTemplate;
     private final Logger logger = LoggerFactory.getLogger(GoogleBooksApiService.class);
+    private final ExecutorService executorService;
+
     private final Integer PAGE_SIZE = 40;
     private Integer copies;
 
@@ -30,77 +33,87 @@ public class GoogleBooksApiService {
     private String apiKey;
 
     @Autowired
-    public GoogleBooksApiService(BookRepository bookRepository, RestTemplate restTemplate) {
-        this.bookRepository = bookRepository;
+    public GoogleBooksApiService(BookService service, RestTemplate restTemplate, ExecutorService executorService) {
+        this.bookService = service;
         this.restTemplate = restTemplate;
+        this.executorService = executorService;
     }
 
     public List<Long> fetchAndSaveBooks(BookSearchRequestDto requestDto) {
         copies = requestDto.getCopies();
-        return requestDto.getSearchGroups().stream()
-                .flatMap(group -> processSearchGroup(group).stream())
-                .map(Book::getId)
-                .collect(Collectors.toList());
+        try {
+            List<Future<List<Book>>> futures = requestDto.getSearchGroups().stream()
+                    .map(group -> executorService.submit(() -> processSearchGroup(group)))
+                    .toList();
+            List<Book> allBooks = new ArrayList<>();
+            for(Future<List<Book>> future : futures) {
+                allBooks.addAll(future.get());
+            }
+            return bookService.saveBooksBatch(allBooks).stream()
+                    .map(Book::getId)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            logger.error("Error processing request {}", e.getMessage());
+            return Collections.emptyList();
+        }
     }
 
     private List<Book> processSearchGroup(SearchGroup group) {
         try {
             List<Book> books = searchGoogleBooks(group);
-            List<Book> filteredBooks = filterUniqueBooks(books);
-            List<Book> booksToSave = filterExistingBooks(filteredBooks);
-            return bookRepository.saveAll(booksToSave);
+            return filterUniqueBooks(books);
         } catch (Exception e) {
             logger.error("Error processing search group {}: {}", group, e.getMessage());
             return Collections.emptyList();
         }
     }
 
-    private List<Book> searchGoogleBooks(SearchGroup searchGroup) {
+    private List<Book> searchGoogleBooks(BookSearchRequestDto.SearchGroup searchGroup) {
         List<Book> allBooks = new ArrayList<>();
         int startIndex = 0;
         Integer totalItems = null;
-
         do {
-            GoogleBooksResponseDto response = fetchBooksBatch(getGoogleBooksApiUrl(searchGroup, startIndex));
-            if (response == null || response.getItems() == null) {
+            String url = getGoogleBooksApiUrl(searchGroup, startIndex);
+            ResponseEntity<GoogleBooksResponseDto> response = restTemplate.getForEntity(url, GoogleBooksResponseDto.class);
+            GoogleBooksResponseDto responseBody = response.getBody();
+
+            if (responseBody == null || responseBody.getItems() == null) {
                 break;
             }
             if (totalItems == null) {
-                totalItems = response.getTotalItems();
+                totalItems = responseBody.getTotalItems();
             }
             allBooks.addAll(
-                    response.getItems().stream()
+                    responseBody.getItems().stream()
                             .map(this::convertToBook)
                             .filter(Objects::nonNull)
                             .toList()
             );
             startIndex += PAGE_SIZE;
         } while (startIndex < totalItems);
-
         return allBooks;
     }
 
-    private GoogleBooksResponseDto fetchBooksBatch(String url) {
-        ResponseEntity<GoogleBooksResponseDto> response = restTemplate.getForEntity(url, GoogleBooksResponseDto.class);
-        return response.getBody();
+    private String getGoogleBooksApiUrl(BookSearchRequestDto.SearchGroup searchGroup, int startIndex) {
+        StringBuilder query = new StringBuilder();
+        appendIfPresent(query, "inauthor", searchGroup.getAuthor());
+        appendIfPresent(query, "intitle", searchGroup.getTitle());
+        appendIfPresent(query, "subject", searchGroup.getCategory());
+        appendIfPresent(query, "isbn", searchGroup.getIsbn());
+
+        return String.format("https://www.googleapis.com/books/v1/volumes?q=%s&orderBy=newest&startIndex=%d&maxResults=%d&key=%s",
+                query.toString().trim(),
+                startIndex,
+                PAGE_SIZE,
+                apiKey);
     }
 
-    private String getGoogleBooksApiUrl(SearchGroup searchGroup, int startIndex) {
-        StringBuilder url = new StringBuilder("https://www.googleapis.com/books/v1/volumes?q=");
-        appendQueryParam(url, "inauthor", searchGroup.getAuthor());
-        appendQueryParam(url, "intitle", searchGroup.getTitle());
-        appendQueryParam(url, "subject", searchGroup.getCategory());
-        appendQueryParam(url, "isbn", searchGroup.getIsbn());
-        url.append("&orderBy=newest&startIndex=").append(startIndex)
-                .append("&maxResults=").append(PAGE_SIZE)
-                .append("&key=").append(apiKey);
-        logger.info(url.toString());
-        return url.toString();
-    }
-
-    private void appendQueryParam(StringBuilder url, String key, String value) {
-        if (value != null) {
-            url.append("+").append(key).append(":").append(value);
+    private void appendIfPresent(StringBuilder query, String key, String value) {
+        if (value != null && !value.isEmpty()) {
+            if (!query.isEmpty()) {
+                query.append("+");
+            }
+            query.append(key).append(":").append(value);
         }
     }
 
@@ -116,12 +129,6 @@ public class GoogleBooksApiService {
                 .stream()
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
-    }
-
-    private List<Book> filterExistingBooks(List<Book> books) {
-        return books.stream()
-                .filter(book -> !bookRepository.existsByTitleOrISBN(book.getTitle(), book.getISBN()))
                 .collect(Collectors.toList());
     }
 
